--- a/Makefile.in
+++ b/Makefile.in
@@ -42,11 +42,11 @@ DIST_COMMON = README $(am__configure_deps) $(srcdir)/Makefile.am \
 	mkinstalldirs
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/boost.m4 \
+	$(top_srcdir)/m4/mate-doc-utils.m4 \
 	$(top_srcdir)/m4/intltool.m4 $(top_srcdir)/m4/libtool.m4 \
 	$(top_srcdir)/m4/ltoptions.m4 $(top_srcdir)/m4/ltsugar.m4 \
 	$(top_srcdir)/m4/ltversion.m4 $(top_srcdir)/m4/lt~obsolete.m4 \
-	$(top_srcdir)/m4/mate-doc-utils.m4 $(top_srcdir)/m4/shave.m4 \
-	$(top_srcdir)/configure.ac
+	$(top_srcdir)/m4/shave.m4 $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 am__CONFIG_DISTCLEAN_FILES = config.status config.cache config.log \
@@ -108,6 +108,7 @@ DIST_ARCHIVES = $(distdir).tar.gz $(distdir).tar.bz2
 GZIP_ENV = --best
 distcleancheck_listfiles = find . -type f -print
 ACLOCAL = @ACLOCAL@
+ACLOCAL_AMFLAGS = -I m4
 ALL_LINGUAS = @ALL_LINGUAS@
 AMTAR = @AMTAR@
 AM_MAKEFLAGS = @AM_MAKEFLAGS@
@@ -151,9 +152,16 @@ ECHO_T = @ECHO_T@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 FGREP = @FGREP@
+MATECONFTOOL = @MATECONFTOOL@
+MATECONF_CFLAGS = @MATECONF_CFLAGS@
+MATECONF_LIBS = @MATECONF_LIBS@
+MATECONF_SCHEMA_CONFIG_SOURCE = @MATECONF_SCHEMA_CONFIG_SOURCE@
+MATECONF_SCHEMA_FILE_DIR = @MATECONF_SCHEMA_FILE_DIR@
 GETTEXT_PACKAGE = @GETTEXT_PACKAGE@
 GMOFILES = @GMOFILES@
 GMSGFMT = @GMSGFMT@
+MNOTE_LOCALEDIR = @MNOTE_LOCALEDIR@
+MNOTE_VERSION = @MNOTE_VERSION@
 GREP = @GREP@
 GTKSPELL_CFLAGS = @GTKSPELL_CFLAGS@
 GTKSPELL_LIBS = @GTKSPELL_LIBS@
@@ -177,9 +185,9 @@ LIBGLIBMM_CFLAGS = @LIBGLIBMM_CFLAGS@
 LIBGLIBMM_LIBS = @LIBGLIBMM_LIBS@
 LIBGTKMM_CFLAGS = @LIBGTKMM_CFLAGS@
 LIBGTKMM_LIBS = @LIBGTKMM_LIBS@
+LIBOBJS = @LIBOBJS@
 LIBMATEPANELAPPLET_CFLAGS = @LIBMATEPANELAPPLET_CFLAGS@
 LIBMATEPANELAPPLET_LIBS = @LIBMATEPANELAPPLET_LIBS@
-LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
 LIBXML_CFLAGS = @LIBXML_CFLAGS@
@@ -193,15 +201,8 @@ MAINT = @MAINT@
 MAKEFLAGS = @MAKEFLAGS@
 MAKEINFO = @MAKEINFO@
 MANIFEST_TOOL = @MANIFEST_TOOL@
-MATECONFTOOL = @MATECONFTOOL@
-MATECONF_CFLAGS = @MATECONF_CFLAGS@
-MATECONF_LIBS = @MATECONF_LIBS@
-MATECONF_SCHEMA_CONFIG_SOURCE = @MATECONF_SCHEMA_CONFIG_SOURCE@
-MATECONF_SCHEMA_FILE_DIR = @MATECONF_SCHEMA_FILE_DIR@
 MKDIR_P = @MKDIR_P@
 MKINSTALLDIRS = @MKINSTALLDIRS@
-MNOTE_LOCALEDIR = @MNOTE_LOCALEDIR@
-MNOTE_VERSION = @MNOTE_VERSION@
 MSGFMT = @MSGFMT@
 MSGFMT_OPTS = @MSGFMT_OPTS@
 MSGMERGE = @MSGMERGE@
@@ -295,7 +296,6 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-ACLOCAL_AMFLAGS = -I m4
 EXTRA_DIST = 
 INTLTOOL_FILES = intltool-extract.in \
                  intltool-merge.in \
