--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,9 @@ Build-Depends: debhelper (>= 7.0.50~),
  mate-doc-utils-gnome | gnome-doc-utils,
  rarian-compat,
  libxslt1-dev,
- libdbus-c++-dev
+ libdbus-c++-dev,
+ libmateconfmm-2.6-dev,
+ libmatepanelappletmm-2.6-dev
 Standards-Version: 3.9.2
 
 Package: mate-note
