And fix the fix

--- a/config.h.in
+++ b/config.h.in
@@ -58,7 +58,7 @@
 #undef HAVE_LOCALE_H
 
 /* Define to 1 if matepanelapplet is available */
-#undef HAVE_MATEPANELAPPLETMM
+#undef HAVE_MATEPANELAPPLET
 
 /* Define to 1 if you have the <memory.h> header file. */
 #undef HAVE_MEMORY_H
