--- a/Makefile.in
+++ b/Makefile.in
@@ -42,11 +42,11 @@ DIST_COMMON = README $(am__configure_deps) $(srcdir)/Makefile.am \
 	mkinstalldirs
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/boost.m4 \
-	$(top_srcdir)/m4/mate-doc-utils.m4 \
 	$(top_srcdir)/m4/intltool.m4 $(top_srcdir)/m4/libtool.m4 \
 	$(top_srcdir)/m4/ltoptions.m4 $(top_srcdir)/m4/ltsugar.m4 \
 	$(top_srcdir)/m4/ltversion.m4 $(top_srcdir)/m4/lt~obsolete.m4 \
-	$(top_srcdir)/m4/shave.m4 $(top_srcdir)/configure.ac
+	$(top_srcdir)/m4/mate-doc-utils.m4 $(top_srcdir)/m4/shave.m4 \
+	$(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 am__CONFIG_DISTCLEAN_FILES = config.status config.cache config.log \
@@ -152,16 +152,9 @@ ECHO_T = @ECHO_T@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 FGREP = @FGREP@
-MATECONFTOOL = @MATECONFTOOL@
-MATECONF_CFLAGS = @MATECONF_CFLAGS@
-MATECONF_LIBS = @MATECONF_LIBS@
-MATECONF_SCHEMA_CONFIG_SOURCE = @MATECONF_SCHEMA_CONFIG_SOURCE@
-MATECONF_SCHEMA_FILE_DIR = @MATECONF_SCHEMA_FILE_DIR@
 GETTEXT_PACKAGE = @GETTEXT_PACKAGE@
 GMOFILES = @GMOFILES@
 GMSGFMT = @GMSGFMT@
-MNOTE_LOCALEDIR = @MNOTE_LOCALEDIR@
-MNOTE_VERSION = @MNOTE_VERSION@
 GREP = @GREP@
 GTKSPELL_CFLAGS = @GTKSPELL_CFLAGS@
 GTKSPELL_LIBS = @GTKSPELL_LIBS@
@@ -185,9 +178,9 @@ LIBGLIBMM_CFLAGS = @LIBGLIBMM_CFLAGS@
 LIBGLIBMM_LIBS = @LIBGLIBMM_LIBS@
 LIBGTKMM_CFLAGS = @LIBGTKMM_CFLAGS@
 LIBGTKMM_LIBS = @LIBGTKMM_LIBS@
-LIBOBJS = @LIBOBJS@
 LIBMATEPANELAPPLET_CFLAGS = @LIBMATEPANELAPPLET_CFLAGS@
 LIBMATEPANELAPPLET_LIBS = @LIBMATEPANELAPPLET_LIBS@
+LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
 LIBXML_CFLAGS = @LIBXML_CFLAGS@
@@ -201,8 +194,15 @@ MAINT = @MAINT@
 MAKEFLAGS = @MAKEFLAGS@
 MAKEINFO = @MAKEINFO@
 MANIFEST_TOOL = @MANIFEST_TOOL@
+MATECONFTOOL = @MATECONFTOOL@
+MATECONF_CFLAGS = @MATECONF_CFLAGS@
+MATECONF_LIBS = @MATECONF_LIBS@
+MATECONF_SCHEMA_CONFIG_SOURCE = @MATECONF_SCHEMA_CONFIG_SOURCE@
+MATECONF_SCHEMA_FILE_DIR = @MATECONF_SCHEMA_FILE_DIR@
 MKDIR_P = @MKDIR_P@
 MKINSTALLDIRS = @MKINSTALLDIRS@
+MNOTE_LOCALEDIR = @MNOTE_LOCALEDIR@
+MNOTE_VERSION = @MNOTE_VERSION@
 MSGFMT = @MSGFMT@
 MSGFMT_OPTS = @MSGFMT_OPTS@
 MSGMERGE = @MSGMERGE@
